--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,7 +7,15 @@ phases:
       - aws --version
       - $(aws ecr get-login --no-include-email --region eu-central-1)
       - REPOSITORY_URI=066862996875.dkr.ecr.eu-central-1.amazonaws.com/ecs-ecr-hello-world
-      - IMAGE_TAG=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
+      - |
+          if [ "X$CODEBUILD_RESOLVED_SOURCE_VERSION" = "X" ]; then
+            # run manually by CodeBuild
+            IMAGE_TAG=$CODEBUILD_BUILD_ID
+          else
+            # run by CodePipeline
+            IMAGE_TAG=cp-$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
+          fi
+      - echo IMAGE_TAG $IMAGE_TAG
   build:
     commands:
       - echo Building the JAR file...
