--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,37 +1,24 @@
 version: 0.2
 
+env:
+  variables:
+    TAG_NAME_PREFIX: "default"
+    BUILD_START_TIME: ´date "+%F %T.%N"´
+    REPOSITORY_URI: 066862996875.dkr.ecr.eu-central-1.amazonaws.com/hello-world
 phases:
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
       - aws --version
-      - $(aws ecr get-login --no-include-email --region eu-central-1)
-      - REPOSITORY_URI=066862996875.dkr.ecr.eu-central-1.amazonaws.com/ecs-ecr-hello-world
-      - |
-          if [ "X$CODEBUILD_RESOLVED_SOURCE_VERSION" = "X" ]; then
-            # run manually by CodeBuild
-            IMAGE_TAG=$CODEBUILD_BUILD_ID
-          else
-            # run by CodePipeline
-            IMAGE_TAG=cp-$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
-          fi
-      - echo IMAGE_TAG $IMAGE_TAG
+      - $(aws ecr get-login --no-include-email --region $(AWS_REGION))
   build:
     commands:
-      - echo Building the JAR file...
-      - mvn package
-      - echo Building the Docker image...
-      - docker build -t $REPOSITORY_URI:latest .
-      - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
+      - echo Running test...
+      - mvn test
   post_build:
     commands:
-      - echo Build completed on `date`
-      - echo Pushing the Docker images...
-      - docker push $REPOSITORY_URI:latest
-      - docker push $REPOSITORY_URI:$IMAGE_TAG
-      - echo Writing image definitions file...
-      - printf '[{"name":"hello-world","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
+      - echo Packaging application...
+      - mvn package
 artifacts:
   files:
     - target/hello-world-*.jar
-    - imagedefinitions.json
