--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,7 +10,8 @@ phases:
     commands:
       - echo Logging in to Amazon ECR...
       - aws --version
-      - $(aws ecr get-login --no-include-email --region $(AWS_REGION))
+      - printenv
+      - $(aws ecr get-login --no-include-email --region $(AWS_DEFAULT_REGION))
   build:
     commands:
       - echo Running test...
