changes evn name

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,7 +11,7 @@ phases:
       - echo Logging in to Amazon ECR...
       - aws --version
       - printenv
-      - $(aws ecr get-login --no-include-email --region $(AWS_DEFAULT_REGION))
+      - $(aws ecr get-login --no-include-email --region ${AWS_DEFAULT_REGION})
   build:
     commands:
       - echo Running test...
