start new configuration

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ env:
   variables:
     VERSION: "default"
     BUILD_START_TIME: ´date "+%F %T.%N"´
-    GIT_HASH: $(git log -1 --pretty=%h)
+    GIT_HASH: ´git log -1 --pretty=%h´
     REPOSITORY_URI: 066862996875.dkr.ecr.eu-central-1.amazonaws.com/hello-world
 phases:
   pre_build:
