--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,14 +8,12 @@ phases:
   pre_build:
     commands:
       - BUILD_START_TIME=$(date "+%F %T.%N")
-      - GIT_HASH=$(git log -1 --pretty=%h)
-      - export GIT_HASH
+      - aws --version
+      - GIT_HASH=$(git log -1 --pretty=%h) && export GIT_HASH
       - ECR_LOGIN_CMD=$(aws ecr get-login --region $AWS_DEFAULT_REGION --no-include-email)
-      - export ECR_LOGIN_CMD
       - printenv
       - echo Logging in to Amazon ECR...
-      - aws --version
-      - $(ECR_LOGIN_CMD)
+      - $ECR_LOGIN_CMD
   build:
     commands:
       - echo Running test...
