--- a/buildspec.yml
+++ b/buildspec.yml
@@ -22,7 +22,8 @@ phases:
     commands:
       - echo Packaging application...
       - mvn package
-      - docker build -t hello-world/hello-world:${GIT_HASH} -t hello-world/hello-world:${VERSION}-${BUILD_START_TIME} -t hello-world/hello-world:latest
+      - printenv
+      - docker build -t hello-world/hello-world:latest
 artifacts:
   files:
     - target/hello-world-*.jar
