start new configuration

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -27,7 +27,7 @@ phases:
       - docker push $REPOSITORY_URI:$VERSION-$BUILD_START_TIME
       - docker push $REPOSITORY_URI:latest
       - echo Writing image definitions file...
-      - printf '[{"name":"hello-world","imageUri":"%s"}]' $REPOSITORY_URI:$GIT_HASH > imagedefinitions.json
+      - printf '[{"name":"hello-world-container","imageUri":"%s"}]' $REPOSITORY_URI:$GIT_HASH > imagedefinitions.json
 artifacts:
   files:
     - target/hello-world-*.jar
